Revert "Add "Delete Category" Feature with authorization"
